[project]
name = "transactionapp"
version = "0.1.0"
description = "Тестовое задание. Backend, Python"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "pydantic[email]>=2.7.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.27.0",
    "python-multipart>=0.0.12"
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
    "mypy>=1.11.0",
    "pre-commit>=3.7.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
]

[dependency-groups]
dev = [
    "ruff>=0.5.0",
    "mypy>=1.11.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
]

[tool.ruff]
target-version = "py313"

include = ["*.py"]

line-length = 120

fix = true

show-fixes = true

[tool.ruff.lint]
select = [
    "E", # PEP8 ошибки
    "W", # PEP8 предупреждения
    "F", # ошибки логики
    "I", # порядок импортов
    "Q", # кавычки

    "B", # потенциальные баги
    "S", # безопасность

    "C90", # сложность кода
    "UP", # автообновление до более современных стандартов
    "RUF", # ruff правила

    "N", # PEP8 имена

    "T", # flake8-todos

    "ASYNC",

    "PERF",

    "SIM"
]

ignore = ["B008"]

fixable = ["I", "UP", "RUF", "E", "W", "F", "Q"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "jose.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "bcrypt.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
